--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -17,4 +17,17 @@
         height: 54px;
         margin: 65px 0 8px 0;
     }
+    &_submit{
+        margin-top: 17px;
+        width: 303px;
+        height: 58px;
+        background: #C70101;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 25px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
 }
