--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -42,4 +42,12 @@
             margin-bottom: 10px;
         }
     }
+    &__catalog{
+        font-size: 30px;
+        line-height: 45px;
+        text-align: center;
+        margin-bottom: 46px;
+        text-transform: uppercase;
+        color: #0D0D0D;
+    }
 }
