--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,4 +15,7 @@
 @import 'blocks/advantages';
 @import 'blocks/title';
 @import 'blocks/consultation';
-@import 'blocks/forms'
+@import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/reviews';
