--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,3 +19,5 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/reviews';
+@import 'blocks/footer';
+@import 'blocks/modals';
